--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,8 @@ html, body{
     padding: 0;
     font-family:Arial, Helvetica, sans-serif;
 }
+
+    /*     Header  */
 .header{
     width: 100%;
     height: 100vh;
@@ -39,6 +41,8 @@ html, body{
     justify-content: flex-start;
     padding: 0 15%;
 }
+
+    /*     Header - navbar  */
 .nav{
     display:flex;    
     /* border:1px solid #e5e7eb; */
@@ -50,7 +54,6 @@ html, body{
     list-style: none;
     display: flex;
     align-items: center;
-    /* border:1px solid #e5e7eb; */
     gap: 10px;
 }
 .nav a{
@@ -59,7 +62,6 @@ html, body{
 .link-list a{
     font-size: var(--hero-subtext-size);
     color: var(--hero-subtext-clr);
-    /* border:1px solid #e5e7eb; */
     display:inline-block;
     padding: 5px 8px;
 }
