--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 *::before,
 *::after{
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 :root{
@@ -31,10 +32,13 @@ html, body{
 }
 
     /*     Header  */
+.header,
+.footer{
+    background-color: var(--dark-bg);
+}
 .header{
     width: 100%;
     height: 100vh;
-    background-color: var(--dark-bg);
     color: var(--hero_logo_clr);
     display: flex;
     flex-direction: column;
@@ -56,7 +60,7 @@ html, body{
     align-items: center;
     gap: 10px;
 }
-.nav a{
+a{
     text-decoration: none;
 }
 .link-list a{
@@ -65,16 +69,48 @@ html, body{
     display:inline-block;
     padding: 5px 8px;
 }
-.header .logo{
+.header .logo,
+.hero-subtitle{
     color: var(--hero_logo_clr);
     font-size: var(--logo-size);
 }
 
+    /*    Header - hero content */
+
 .hero-img{
-    width:400px;
-    height: 200px;
+    width:450px;
+    height: auto;
     background-color: #eee;
 }
+.header-content-wrapper{
+    display: flex;
+    /* border:1px solid whitesmoke; */
+    margin-top: 10%;
+    height: auto;
+}
+.hero-wrapper{
+    flex: 1;
+    height:auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap:10px;
+}
+.hero-title{
+    margin: 0;
+    font-size: var(--hero-size);
+    font-weight: var(--bold-weight);
+    color: var(--hero_logo_clr);
+}
+.signup-btn{
+    background-color: var(--header-btn-bg);    
+    color:var(--hero-subtext-clr);
+    padding: 8px 20px;
+    border-radius: 4px;
+}
+
+
+
 
 
 
