--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,48 @@ a{
     border-radius: 4px;
 }
 
+    /*             Info-section     */
+
+.info-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:7%;
+    gap:40px;
+}
+    /*        Info-section - title */
+.info-title{
+    font-size: var(--info-title-font);
+    font-weight: var(--bold-weight);
+    color: var(--dark-bg);
+    margin: 0;
+}
+
+    /*      Info-section - info details  */
+.info-card-wrapper{
+    display: flex;
+    flex-wrap:wrap ;
+    justify-content: space-between;
+    gap:40px;
+}
+
+.card{
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    
+}
+.card img{
+    height:200px;
+    background-color: #1f2937;
+    border-radius: 10px;
+}
+.card div{
+    text-align: center;
+}
+
+
 
 
 
